--- a/.github/workflows/set-metadata.yml
+++ b/.github/workflows/set-metadata.yml
@@ -236,7 +236,7 @@ jobs:
             run_id=$(echo "$details" | jq --arg repo "$repo" '".$repo"."run_id"')
             echo "Discovered run_id '$run_id' for repo $repo"
             all_details=$(echo "$details" | jq --arg repo "$repo" '".$repo"')
-            elif [[ -n "$run_id" ]]; then
+            if [[ -n "$run_id" ]]; then
               filtered_details=$(echo "$filtered_details" | jq --arg all_details "$all_details" --arg repo "$repo" '. + {"$repo": $all_details}')
             else
               echo "Skipping (empty run_id)"
@@ -284,21 +284,22 @@ jobs:
           BRANCH_ITERATION=${{ github.run_attempt }}.${{ github.run_number }}
           echo "version=$(echo ${{ steps.next-semvers.outputs.patch }}-alpha+BR.${{ github.ref_name }}.${BRANCH_ITERATION})" >> $GITHUB_OUTPUT
 
-      - name: Make Version PEP-Compliant
+      - name: Format version string
         if: steps.set-pr-version != '' || steps.set-branch-version != ''
-        id: pepify
+        id: format-version
         run: |
           if [[ -n "${{ steps.set-pr-version.outputs.version }}" ]]; then
-            echo "Found PR version to pepify..."
+            echo "Found PR version..."
             semver=${{ steps.set-pr-version.outputs.version }}
           else
-            echo "Found branch version to pepify..."
+            echo "Found branch version..."
             semver=${{ steps.set-branch-version.outputs.version }}
           fi
           # If this is not a Python repo, do nothing
           if ! [[ "${{ github.repository }}" =~ "-py" ]]; then
-            echo "Current repository is not a Python project, nothing to PEP-ify."
+            echo "Current repository is not a Python project, nothing to do."
             echo "version=$semver" >> $GITHUB_OUTPUT
+            exit 0
           fi
           # Per PEP 440, the full scope of traditional semantic versioning is not valid in Python.
           int_only_br=$(echo "${{ github.ref_name }}" | sed 's/[^0-9]*//g')
@@ -373,9 +374,9 @@ jobs:
       - name: choose-version
         id: choose-version
         run: |
-          if [[ -n "${{ steps.pepify.outputs.version }}" ]]; then
-            echo "Setting pepified PR/branch version"
-            echo "version=${{ steps.pepify.outputs.version }}"
+          if [[ -n "${{ steps.format-version.outputs.version }}" ]]; then
+            echo "Setting PR/branch version"
+            echo "version=${{ steps.format-version.outputs.version }}"
           elif [[ -n "${{ steps.set-release-version.outputs.version }}" ]]; then
             echo "Setting release version"
             echo "version=${{ steps.set-release-version.outputs.version }}" >> $GITHUB_OUTPUT
