--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -93,9 +93,8 @@ jobs:
               gh $run_type download -D amalgam/lib/$plat/$arch -R "howsoai/$repo" -p "*${{ inputs.amalgam-plat-arch }}*" "$run_id"
               # Extract binaries
               cd amalgam/lib/$plat/$arch && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
-              cd ../..
-              find . -type d -name lib -exec sh -c 'mv {}/* "$(dirname {})"' \;
-              ls -l ./$plat/$arch
+              cp lib/* .
+              ls -l
             elif [[ "$repo" == "howso-engine" ]]; then
               echo "Downloading and extracting Howso Engine CAMLs..."
               gh $run_type download -D howso/howso-engine -R "howsoai/$repo" -p "howso-engine-*" "$run_id"
