--- a/workflow-templates/build.yml
+++ b/workflow-templates/build.yml
@@ -98,9 +98,9 @@ jobs:
         run: |
           echo "TODO"
 
+  # Remove if not a Python project
   pytest-linux-3-8-st:
     needs: ['metadata', 'build']
-    if: inputs.build-type != 'PR'
     uses: howsoai/.github/.github/workflows/pytest.yml@main
     secrets: inherit
     with:
@@ -124,9 +124,5 @@ jobs:
       with:
         tag: ${{ needs.metadata.outputs.version }}
         commit: ${{ github.sha }}
-        name: "example-release ${{ needs.metadata.outputs.version }}"
-        artifactErrorsFailBuild: true
+        name: "${{ github.repository }} ${{ needs.metadata.outputs.version }}"
         generateReleaseNotes: true
-        makeLatest: legacy
-        artifacts: "dist/*.whl"
-        artifactContentType: application/gzip
