--- a/.github/workflows/set-metadata.yml
+++ b/.github/workflows/set-metadata.yml
@@ -75,18 +75,19 @@ jobs:
 
         # If the provided build is a URL, extract the run ID. Else, if the build exists, add it to the payload JSON.
         while read -r repo; do
-          build=$(echo "$builds_json" | jq --arg repo "$repo" '."$repo"')
-          echo "Discovered build '$build' for repo $repo"
+          build=$(echo "$builds_json" | jq --arg repo "$repo" '.[$repo]')
+          echo "Discovered build $build for repo $repo"
           if [[ "$build" =~ runs/([0-9]+) ]]; then
-            payload=$(echo "$payload" | jq --arg run_id "${BASH_REMATCH[1]}" --arg repo "$repo" '. + {"$repo": $run_id}')
-          elif [[ -n "$build" ]]; then
-            payload=$(echo "$payload" | jq --arg build "$build" --arg repo "$repo" '. + {"$repo": $build}')
+            echo "Adding build ID ${BASH_REMATCH[1]} to $repo"
+            payload=$(echo "$payload" | jq --arg run_id "${BASH_REMATCH[1]}" --arg repo "$repo" '. + {($repo): ($run_id)}')
+          elif [[ -n "$build" && "$build" != "\"\"" ]]; then
+            echo "Adding build ID $build to $repo"
+            payload=$(echo "$payload" | jq --arg build "$build" --arg repo "$repo" '. + {($repo): ($build)}')
           fi
         done < <(echo "$builds_json" | jq -rc 'keys[]')
 
-        fmtd_payload=$(echo -n "$payload" | tr -d '\n')
-        echo "Formatted payload: $fmtd_payload"
-        echo "payload=$fmtd_payload" >> $GITHUB_OUTPUT
+        echo "Payload: $payload"
+        echo "payload=$payload" >> $GITHUB_OUTPUT
 
   get-howso-synthesizer-py-details:
     needs: ['construct-payload']
@@ -230,14 +231,15 @@ jobs:
           } 
           EOF
           )
-              
+          filtered_details="{}"
           # Iterate through the full details JSON, and add those with run IDs present to the filtered JSON
           while read -r repo; do
-            run_id=$(echo "$details" | jq --arg repo "$repo" '."$repo"."run_id"')
-            echo "Discovered run_id '$run_id' for repo $repo"
-            all_details=$(echo "$details" | jq --arg repo "$repo" '."$repo"')
+            run_id=$(echo "$details" | jq --arg repo "$repo" '.[$repo].run_id')
+            echo "Checking $repo"
+            echo "Discovered run_id $run_id for repo $repo"
+            all_details=$(echo "$details" | jq --arg repo "$repo" '.[$repo]')
             if [[ -n "$run_id" ]]; then
-              filtered_details=$(echo "$filtered_details" | jq --arg all_details "$all_details" --arg repo "$repo" '. + {"$repo": $all_details}')
+              filtered_details=$(echo "$filtered_details" | jq --arg repo "$repo" --argjson all_details "$all_details" '. + { ($repo): $all_details }')
             else
               echo "Skipping (empty run_id)"
             fi
