--- a/.github/workflows/get-dependency-details.yml
+++ b/.github/workflows/get-dependency-details.yml
@@ -89,8 +89,8 @@ jobs:
               details=$(gh release view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json targetCommitish,url)
               head_sha=$(echo "$details" | jq '.targetCommitish')
               url=$(echo "$details" | jq '.url')
-              echo "head-sha=$(echo "$head_sha")" >> $GITHUB_OUTPUT
-              echo "url=$(echo "$url")" >> $GITHUB_OUTPUT
+              echo "head-sha=$(echo $head_sha | tr -d '"')" >> $GITHUB_OUTPUT
+              echo "url=$(echo $url | tr -d '"')" >> $GITHUB_OUTPUT
           elif gh run view --repo ${{ inputs.owner }}/${{ inputs.repo }} "$ID" > /dev/null 2>&1; then
               # Prerelease (workflow run)
               echo "Found non-release build"
@@ -101,10 +101,10 @@ jobs:
               build_title=$(echo "$details" | jq '.displayTitle')
               head_sha=$(echo "$details" | jq '.headSha')
               url=$(echo "$details" | jq '.url')
-              echo "build-date=$(echo "$build_date")" >> $GITHUB_OUTPUT
-              echo "build-title=$(echo "$build_title")" >> $GITHUB_OUTPUT
-              echo "head-sha=$(echo "$head_sha")" >> $GITHUB_OUTPUT
-              echo "url=$(echo "$url")" >> $GITHUB_OUTPUT
+              echo "build-date=$(echo $build_date | tr -d '"')" >> $GITHUB_OUTPUT
+              echo "build-title=$(echo $build_title | tr -d '"')" >> $GITHUB_OUTPUT
+              echo "head-sha=$(echo $head_sha | tr -d '"')" >> $GITHUB_OUTPUT
+              echo "url=$(echo $url | tr -d '"')" >> $GITHUB_OUTPUT
           else
               echo "Build not found"
               exit 1
