--- a/workflow-templates/build-pr.yml
+++ b/workflow-templates/build-pr.yml
@@ -37,6 +37,11 @@ jobs:
     needs: ['build']
     uses: "howsoai/.github/.github/workflows/scan-pull-request.yml@main"
     secrets: inherit
+    with:
+      #######################################################################################
+      # TODO: Replace package names below with relevant Howso dependencies for this project #
+      #######################################################################################
+      upstream-packages: 'amalgam-lang-py howso-engine-py howso-synthesizer-py howso-validator-py howso-validator-enterprise-py'
 
   # This job is here to have only one final step to add for "Status Checks"
   # in GitHub, instead of adding every leaf test from 'build-test-package'
