--- a/.github/workflows/set-metadata.yml
+++ b/.github/workflows/set-metadata.yml
@@ -52,7 +52,9 @@ jobs:
       run: |
         if [[ -n "${{ inputs.payload }}" ]]; then
           echo "Found preconstructed JSON payload"
-          echo "payload=${{ inputs.payload }}" >> $GITHUB_OUTPUT
+          fmtd_payload=$(printf "%s" '${{ inputs.payload }}' | jq -c)
+          echo "Payload: $fmtd_payload"
+          echo "payload=$fmtd_payload" >> $GITHUB_OUTPUT
           exit 0
         fi
 
